--- a/index.html
+++ b/index.html
@@ -3,6 +3,13 @@
 <title>first page </title>
 </head>
 <body>
-<h1>HELLO ANUSHA</h1>
+  <h3>
+<pre>
+ANUSHA MAMIDALA
+14003252
+CSE
+K L UNIVERSITY
+</pre>
+  </h3>
 </body>
 </html>
